# mcp-server-py-template

./: .gitignore  README.md  pyproject.toml  test_mcp_server.py
src/mcp_server/: main.py
